# COSE461_Project

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt  result.json
.dump/: config.py  evaluate.py  train.py  train_ape.py  trainer.py  trainer_ape.py
dataset/titanic-dpo/: titanic-test-dpo-dataset.json  titanic-train-dpo-dataset.json
dataset/titanic-dpo-fixed/: titanic-test-dpo-dataset.json  titanic-train-dpo-dataset.json
notebook/: api_test.ipynb  base_template_eval.ipynb  check_llm_server.ipynb  download_hf_dataset.ipynb  gbdt_tabular_eval.ipynb  how_to_load_mistral3.ipynb  list_hf_models.ipynb  random_forest_eval.ipynb  server_test.ipynb
notebooks/: fixed_prompt_example.ipynb  preparation.ipynb
script/: accelerate_test.py  api_server.py  config.py  default_config.yaml  download_hf_model.py  evaluate.py  fix_dpo_ratio.py  generate_dpo_dataset.py  generated_prompts.json  generation_stats.json  hf_download_model.py  hf_list_models.py  hf_server.py  inference_server.py  pipeline.py  pipeline_hf.py  pipeline_vllm.py  prompt_pipeline.py  prompt_server.py  start_server.py  train.py  train_ape.py  train_dpo.py  trl_test.py
src/: dataset.py  dataset_classes.py  dpo_dataset_generator.py  dpo_utils.py  hf_module.py  hf_utils.py  inference.py  model.py  reward.py  setup.py  trainer.py  trainer_ape.py  utils.py  vllm_module.py
src/model/: __init__.py  inference.py  prompt.py  reward.py
