[project]
name = "cose461-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.1",
    "huggingface-hub>=0.30.2",
    "numpy>=2.2.5",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "vllm>=0.2.5",
    "wandb>=0.19.10",
]
