[project]
name = "cose461-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.1",
    "deepspeed>=0.16.9",
    "flash-attn>=2.7.4.post1",
    "huggingface-hub>=0.30.2",
    "ninja>=1.11.1.4",
    "packaging>=25.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "torch==2.6.0",
    "transformers>=4.51.3",
    "triton==3.2.0",
    "trl[judge]>=0.17.0",
    "vllm>=0.8.5.post1",
    "wandb>=0.19.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]
